manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: https://github.com/gnunn1/simple-httpd
  labels:
    app: practice-test
    app.kubernetes.io/component: practice-test
    app.kubernetes.io/instance: practice-test
    app.kubernetes.io/name: practice-test
    app.kubernetes.io/part-of: practice-test-app
  name: practice-test
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: practice-test
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: practice-test
        deploymentconfig: practice-test
    spec:
      containers:
      - image: quay.io/gnunn/simple-httpd:latest
        imagePullPolicy: Always
        name: practice-test
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
