manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: practice-test
    app.kubernetes.io/component: practice-test
    app.kubernetes.io/instance: practice-test
    app.kubernetes.io/name: practice-test
    app.kubernetes.io/part-of: practice-test-app
  name: practice-test
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: practice-test
    weight: 100
  wildcardPolicy: None
